apps/call-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hailcast-call-api
  namespace: hailcast
  labels:
    app: hailcast-call-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hailcast-call-api
  template:
    metadata:
      labels:
        app: hailcast-call-api
    spec:
      serviceAccountName: call-api-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: call-api
          image: 797452357900.dkr.ecr.ap-northeast-2.amazonaws.com/hailcast-dev-call-api:8db63e5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "768Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
